--- a/index.html
+++ b/index.html
@@ -7,20 +7,22 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <header>
-    TK Photography
+    <h1>TK Photography</h1>
   </header>
   <nav>
-    About
-    Gallery
-    Contact
-    top
+    <h2>
+        About
+        Gallery
+        Contact
+        top
+    </h2>
    </nav>
   <body>
-    About
+    <h2>About</h2>
     Hello! 
     I’m TK and I’m a photographer. I love looking at life through the lens of my camera. 
     Landscape photography is my speciality and it’s taken me all over the world. 
-    Gallery
+    <h2>Gallery</h2>
     Here are some highlights of my work. The locations and year are in the caption. 
 
     Chile.png
