--- a/index.html
+++ b/index.html
@@ -61,16 +61,18 @@
     <img src="images/Wyoming.png" alt="">
     <figcaption class="caption">Wyoming, 2021</figcaption>
     
-    Contact
-    Please fill out this form and I’ll connect with you soon.
+    <div class="contact">
+        <h2>Contact</h2>
+        Please fill out this form and I’ll connect with you soon.
 
-    Your contact information
-    Name (Your full name)
-    Email (Enter your email address)
-    Message (What can I help you with?)
-    Submit
+        Your contact information
+        Name (Your full name)
+        Email (Enter your email address)
+        Message (What can I help you with?)
+    </div>
+    <buttom>Submit</buttom>
   </body>
   <footer>
-    Copyright 2021 TK Photography
+    <h2>Copyright 2021 TK Photography</h2>
   </footer>
 </html>
