--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
       </figure>
       <figure>
         <img src="images/Iran.png" alt="">
-        <figcaption class="caption">Iran, 1999</figcaption>
+        <figcaption title="Iran" class="caption">Iran, 1999</figcaption>
       </figure>
       <figure>
         <img src="images/Ireland.png" alt="">
-        <figcaption class="caption">Ireland, 2012</figcaption>
+        <figcaption title="Ireland" class="caption">Ireland, 2012</figcaption>
       </figure>
       <figure>
         <img src="images/Italy.png" alt="">
-        <figcaption class="caption">Italy, 2015</figcaption>
+        <figcaption title="Italy" class="caption">Italy, 2015</figcaption>
       </figure>
       <figure>
         <img src="images/Moab-Desert.png" alt="">
@@ -55,19 +55,19 @@
       </figure>
       <figure>
         <img src="images/Rocky-Mountains.png" alt="">
-        <figcaption class="caption">Rocky Mountains, 2009</figcaption>
+        <figcaption title="Rocky" class="caption">Rocky Mountains, 2009</figcaption>
       </figure>
       <figure>
         <img src="images/Switzerland.png" alt="">
-        <figcaption class="caption">Switzerland, 2014</figcaption>
+        <figcaption title="Switzerland"class="caption">Switzerland, 2014</figcaption>
       </figure>
       <figure>
         <img src="images/UK.png" alt="">
-        <figcaption class="caption">UK, 2005</figcaption>
+        <figcaption title="UK" class="caption">UK, 2005</figcaption>
       </figure>
       <figure>
         <img src="images/USA.png" alt="">
-        <figcaption class="caption">USA, 2021</figcaption>
+        <figcaption title="USA" class="caption">USA, 2021</figcaption>
       </figure>
       <figure>
         <img src="images/Wyoming.png" alt="">
@@ -76,14 +76,14 @@
     </div>
     <div class="contact">
         <h2>Contact</h2>
-        Please fill out this form and I’ll connect with you soon.
+        <p>Please fill out this form and I’ll connect with you soon.</p>
 
         Your contact information
         Name (Your full name)
         Email (Enter your email address)
         Message (What can I help you with?)
+        <button>Submit</button>
     </div>
-    <buttom>Submit</buttom>
   </body>
   <footer>
     <h2>Copyright 2021 TK Photography</h2>
