--- a/index.html
+++ b/index.html
@@ -77,13 +77,15 @@
     <div class="contact">
         <h2>Contact</h2>
         <p>Please fill out this form and I’ll connect with you soon.</p>
-
-        Your contact information
-        Name (Your full name)
-        Email (Enter your email address)
-        Message (What can I help you with?)
-        
-        <button>Submit</button>
+        <form>
+          <label>NAME</label><br>
+          <input type="text" id="Name" class="text-box" placeholder="YOUR FULL NAME"><br>
+          <label>EMAIL</label><br>
+          <input type="text" id="email" class="text-box" placeholder="ENTER YOUR EMAIL ADDRESS"><br>
+          <label>MESSAGE</label><br>
+          <input type="text" id="message" class="text-box" placeholder="WHAT CAN I HELP YOU WITH?"><br>
+          <button type="submit">SUBMIT</button>
+        </form>
     </div>
   </body>
   <footer>
