--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     </p>
     <h2>Gallery</h2>
     <p>Here are some highlights of my work. The locations and year are in the caption.</p><br>
-    <div class="images">
+    
+    <main class="images">
       <figure>  
         <img src="images/Chile.png" alt="">
         <figcaption class="caption">Chile, 2001</figcaption>
@@ -74,8 +75,8 @@
         <img src="images/Wyoming.png" alt="">
         <figcaption class="caption">Wyoming, 2021</figcaption>
       </figure>
-    </div>
-    <div class="contact">
+    </main>
+    <section class="contact">
         <h2>Contact</h2>
         <p>Please fill out this form and I’ll connect with you soon.</p>
         <form>
@@ -87,7 +88,7 @@
           <input type="text" id="message" class="text-box" placeholder="WHAT CAN I HELP YOU WITH?"><br>
           <button class="submit" type="submit">SUBMIT</button>
         </form>
-    </div>
+      </section>
   </body>
   <footer>
     <h2>Copyright 2021 TK Photography</h2>
