--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     <title>Photography</title>
     <link rel="stylesheet" href="styles.css">
   </head>
+  <body>
   <header>
     <h1>TK Photography</h1>
   </header>
   <nav>
-      <a href="">ABOUT</a>
-      <a href="">GALLERY</a>
-      <a href="">CONTACT</a>
+      <ul>
+        <li><a href="">ABOUT</a></li>
+        <li><a href="">GALLERY</a></li>
+        <li><a href="">CONTACT</a></li>
+      </ul>
    </nav>
    <button class="top" onclick="window.scrollTo({ top: 0, behavior: 'smooth' });">Top</button>
-  <body>
+  
     <h2>About</h2>
     <p>Hello!</p>
     
@@ -29,39 +32,39 @@
     <main class="images">
       <figure>  
         <img src="images/Chile.png" alt="">
-        <figcaption class="caption">Chile, 2001</figcaption>
+        <figcaption class="caption">CHILE, 2001</figcaption>
       </figure>
       <figure>  
         <img src="images/Guatemala.png" alt="">
-        <figcaption class="caption">Guatemala, 1997</figcaption>
+        <figcaption class="caption">GUATEMALA, 1997</figcaption>
       </figure>
       <figure>
         <img src="images/Hawaii.png" alt="">
-        <figcaption title="Hawaii" class="caption">Hawaii, 2010</figcaption>
+        <figcaption title="Hawaii" class="caption">HAWAII, 2010</figcaption>
       </figure>
       <figure>
         <img src="images/Iran.png" alt="">
-        <figcaption title="Iran" class="caption">Iran, 1999</figcaption>
+        <figcaption title="Iran" class="caption">IRAN, 1999</figcaption>
       </figure>
       <figure>
         <img src="images/Ireland.png" alt="">
-        <figcaption title="Ireland" class="caption">Ireland, 2012</figcaption>
+        <figcaption title="Ireland" class="caption">IRELAND, 2012</figcaption>
       </figure>
       <figure>
         <img src="images/Italy.png" alt="">
-        <figcaption title="Italy" class="caption">Italy, 2015</figcaption>
+        <figcaption title="Italy" class="caption">ITALY, 2015</figcaption>
       </figure>
       <figure>
         <img src="images/Moab-Desert.png" alt="">
-        <figcaption class="caption">Moab Desert, 2020</figcaption>
+        <figcaption class="caption">MOAB DESERT, 2020</figcaption>
       </figure>
       <figure>
         <img src="images/Rocky-Mountains.png" alt="">
-        <figcaption title="Rocky" class="caption">Rocky Mountains, 2009</figcaption>
+        <figcaption title="Rocky" class="caption">ROCKY MOUNTAINS, 2009</figcaption>
       </figure>
       <figure>
         <img src="images/Switzerland.png" alt="">
-        <figcaption title="Switzerland"class="caption">Switzerland, 2014</figcaption>
+        <figcaption title="Switzerland" class="caption">SWITZERLAND, 2014</figcaption>
       </figure>
       <figure>
         <img src="images/UK.png" alt="">
@@ -73,7 +76,7 @@
       </figure>
       <figure>
         <img src="images/Wyoming.png" alt="">
-        <figcaption class="caption">Wyoming, 2021</figcaption>
+        <figcaption class="caption">WYOMING, 2021</figcaption>
       </figure>
     </main>
     <section class="contact">
